force-app/main/default/objects/Account/fields/DatabaseID__c.field-meta.xml
<CustomField>
    <fullName>DatabaseID__c</fullName>
    <externalId>true</externalId>
    <label>DatabaseID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>