force-app/main/default/objects/Account/fields/SFCCLtngPtr__Lead_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Lead_Conversion_Rate__c</fullName>
    <formula>if( AND(NULLVALUE(SFCCLtngPtr__Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(SFCCLtngPtr__Number_Leads_Total__c, 0)&lt;&gt;0), SFCCLtngPtr__Number_Leads_Converted__c / SFCCLtngPtr__Number_Leads_Total__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Conversion Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>