force-app/main/default/objects/Account/fields/SFCCLtngPtr__Number_Leads_Converted__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Number_Leads_Converted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number leads converted by the partner account</description>
    <label>Number Leads Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>