force-app/main/default/objects/Account/fields/SFCCLtngPtr__Number_Leads_Total__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Number_Leads_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number leads owned by the partner account all time, including converted and active</description>
    <label>Number Leads Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>