force-app/main/default/objects/Account/fields/SFCCLtngPtr__Number_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Number_Open_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number open opportunities owned by the current partner account</description>
    <label>Number Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>