force-app/main/default/objects/Account/fields/SFCCLtngPtr__Opportunity_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Opportunity_Win_Rate__c</fullName>
    <formula>if( AND(NULLVALUE(SFCCLtngPtr__Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SFCCLtngPtr__Number_Closed_Opportunities__c, 0)&lt;&gt;0), SFCCLtngPtr__Number_Closed_Won_Opportunities__c / SFCCLtngPtr__Number_Closed_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Win Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>