force-app/main/default/objects/Account/fields/SFCCLtngPtr__Partner_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Partner_Program_Level__c</fullName>
    <label>Partner Program Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>