force-app/main/default/objects/Account/fields/SFCCLtngPtr__Value_Open_Opportunties__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Value_Open_Opportunties__c</fullName>
    <label>Value Open Opportunties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>