force-app/main/default/objects/Account/fields/SFCCLtngPtr__YTD_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__YTD_Revenue_Generated__c</fullName>
    <label>YTD Revenue Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>