force-app/main/default/objects/Account/fields/SiebelId__c.field-meta.xml
<CustomField>
    <fullName>SiebelId__c</fullName>
    <externalId>true</externalId>
    <label>SiebelId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>